# re-wx

./: .gitmodules  DEV.md  README.md  TODO.md  flake.nix  pyproject.toml  requirements.txt  setup.py
docs/: debugging.md  main-concepts.md  supported-wx-components.md
rewx/: __init__.py  app.py  betterapi.py  bitmap_support.py  components.py  core.py  dispatch.py  fileCC.py  file_a.py  file_b.py  file_bb.py  file_c.py  filea.py  index.html  jsjs.js  render.py  rewx.py  rewx2.py  rewx_old.py  sssss.py  subimpl.py  test.py  testbed.py  todo_traditional.py  types.py  util.py  virtualdom.py  widgets.py
rewx/examples/: issue0002.py  issue0003.py  issue0003b.py  issue0003c.py  issue0003d.py  issue0004.py
rewx/examples/basics/: simple2.py
rewx/examples/gooey/: components.py  gooey.py
rewx/examples/todo_app/: todo_app.py
rewx/examples/youtube_dl/: youtube_dl.py
rewx/exampless/basics/: clock.py
rewx/exampless/gooey/: components.py  gooey.py
rewx/exampless/hello_world/: hello.py
rewx/exampless/kitchen_sink/: kitchen_sink.py
rewx/exampless/todo_app/: todo_app.py
rewx/exampless/video_player/: asdf.py  videoplayer.py
rewx/exampless/youtube_dl/: youtube_dl.py
tests/: test_create_element.py  test_nested_components.py  test_rewx.py  test_widgets.py
tests/components/: test_gauge.py
tests/images/: __init__.py
tests/test_components/: test_gauge.py  test_staticbitmap.py  test_textctrl.py
